--- a/TeX/thesis-official.tex
+++ b/TeX/thesis-official.tex
@@ -202,7 +202,7 @@ Medford, MA 02155}
 
 %\thesisdedicationpage                %% Generate the dedication page.
 
-\include{acknowledgement}  %%% Goto acknowledgement.tex for content
+%\include{acknowledgement}  %%% Goto acknowledgement.tex for content
 
 \include{abstract}   %%% Goto abstract.tex for content
 
@@ -216,7 +216,7 @@ Medford, MA 02155}
 \include{chapter2/chapter2file}   
 \include{chapter3/chapter3file}         
 \include{chapter4/chapter4file}                
-                  
+\include{chapter5/chapter5file}                       
 
 %================================ END of chapters =============================
 
